// Copyright 2025-2026 Docker, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package resolver.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/docker/secrets-engine/x/api/resolver/v1;resolverv1";

service RegisterService {
  // RegisterPlugin registers the plugin with the engine.
  rpc RegisterPlugin(RegisterPluginRequest) returns (RegisterPluginResponse);
}

message RegisterPluginRequest {
  // Name of the plugin to register.
  string name = 1;
  // Version of the plugin.
  string version = 2;
  // Pattern
  string pattern = 3;
}

message RegisterPluginResponse {
  // Name of the secrets engine is running in.
  string engine_name = 1;
  // Version of the runtime engine is running in.
  string engine_version = 2;
  // Configured request processing timeout in milliseconds.
  google.protobuf.Duration request_timeout = 3;
}

service ListService {
  // ListPlugins returns all plugins registered with the engine.
  rpc ListPlugins(ListPluginsRequest) returns (ListPluginsResponse);
}

message Plugin {
  // Name
  string name = 1;
  // Version
  string version = 2;
  // Pattern
  string pattern = 3;
  // External vs builtin
  bool external = 4;
}

message ListPluginsRequest {}

message ListPluginsResponse {
  repeated Plugin plugins = 1;
}

service PluginService {
  // Shutdown a plugin (let it know the runtime is going down).
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message ShutdownRequest {}

message ShutdownResponse {}

service ResolverService {
  // Resolve a secret by its ID.
  rpc GetSecrets(GetSecretsRequest) returns (GetSecretsResponse);
}

message GetSecretsRequest {
  // ID of the secret to resolve.
  string pattern = 1;
}

message GetSecretsResponse {
  repeated Envelope envelopes = 1;

  message Envelope {
    // ID of the secret to resolve.
    string id = 1;
    // The resolved secret value.
    bytes value = 2;

    string provider = 3;

    string version = 4;

    google.protobuf.Timestamp created_at = 5;

    google.protobuf.Timestamp resolved_at = 6;

    google.protobuf.Timestamp expires_at = 7;

    map<string, string> metadata = 8;
  }
}
